--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,132 +1,195 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".HistoryActivity">
 
-    <include
-        android:id="@+id/header"
-        layout="@layout/layout_header"/>
+    <!-- Contenido principal -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card"
-        android:layout_width="350dp"
-        android:layout_height="150dp"
-        android:background="@drawable/shadow"
-        app:cardBackgroundColor="@color/Primary_Light"
-        app:cardCornerRadius="20dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <!-- Cabecera del menú -->
+        <include
+            android:id="@+id/header"
+            layout="@layout/layout_header" />
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/phone"
-        android:contentDescription="@string/phone_ic"
-        android:src="@drawable/phone_ic"
-        android:layout_marginStart="20dp"
-        app:layout_constraintStart_toStartOf="@id/card"
-        app:layout_constraintTop_toTopOf="@id/card"
-        app:layout_constraintBottom_toBottomOf="@id/card"
-        android:elevation="6dp"/>
+        <!-- Primer CardView -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card"
+            android:layout_width="350dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/shadow"
+            app:cardBackgroundColor="@color/Primary_Light"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintTop_toBottomOf="@id/header"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/title"
+        <ImageView
+            android:id="@+id/phone"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/phone_ic"
+            android:src="@drawable/phone_ic"
+            android:elevation="6dp"
+            app:layout_constraintStart_toStartOf="@id/card"
+            app:layout_constraintTop_toTopOf="@id/card"
+            app:layout_constraintBottom_toBottomOf="@id/card" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/llamadas"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="20sp"
+            android:textColor="@color/Secondary_Darker"
+            android:elevation="6dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintEnd_toEndOf="@id/card"
+            app:layout_constraintTop_toTopOf="@id/card"
+            app:layout_constraintStart_toStartOf="@id/card"
+            app:layout_constraintBottom_toBottomOf="@id/card" />
+
+        <!-- Segundo CardView -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card2"
+            android:layout_width="350dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/shadow"
+            app:cardBackgroundColor="@color/Primary_Light"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintTop_toBottomOf="@id/card"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/results"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/results"
+            android:src="@drawable/results"
+            android:elevation="6dp"
+            app:layout_constraintStart_toStartOf="@id/card2"
+            app:layout_constraintTop_toTopOf="@id/card2"
+            app:layout_constraintBottom_toBottomOf="@id/card2" />
+
+        <TextView
+            android:id="@+id/title_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/resultados"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="20sp"
+            android:textColor="@color/Secondary_Darker"
+            android:elevation="6dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintEnd_toEndOf="@id/card2"
+            app:layout_constraintTop_toTopOf="@id/card2"
+            app:layout_constraintStart_toStartOf="@id/card2"
+            app:layout_constraintBottom_toBottomOf="@id/card2" />
+
+        <!-- Tercer CardView -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card3"
+            android:layout_width="350dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/shadow"
+            app:cardBackgroundColor="@color/Primary_Light"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintTop_toBottomOf="@id/card2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/location"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/ubication"
+            android:src="@drawable/location_ic"
+            android:elevation="6dp"
+            app:layout_constraintStart_toStartOf="@id/card3"
+            app:layout_constraintTop_toTopOf="@id/card3"
+            app:layout_constraintBottom_toBottomOf="@id/card3" />
+
+        <TextView
+            android:id="@+id/title_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ubicaciones"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="20sp"
+            android:textColor="@color/Secondary_Darker"
+            android:elevation="6dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintEnd_toEndOf="@id/card3"
+            app:layout_constraintTop_toTopOf="@id/card3"
+            app:layout_constraintStart_toStartOf="@id/card3"
+            app:layout_constraintBottom_toBottomOf="@id/card3" />
+
+        <!-- Cuarto CardView -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card4"
+            android:layout_width="350dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/shadow"
+            app:cardBackgroundColor="@color/Primary_Light"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintTop_toBottomOf="@id/card3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/falls"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/falls"
+            android:src="@drawable/fall_ic"
+            android:elevation="6dp"
+            app:layout_constraintStart_toStartOf="@id/card4"
+            app:layout_constraintTop_toTopOf="@id/card4"
+            app:layout_constraintBottom_toBottomOf="@id/card4" />
+
+        <TextView
+            android:id="@+id/title_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ca_das"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="20sp"
+            android:textColor="@color/Secondary_Darker"
+            android:elevation="6dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="@id/card4"
+            app:layout_constraintTop_toTopOf="@id/card4"
+            app:layout_constraintStart_toStartOf="@id/card4"
+            app:layout_constraintBottom_toBottomOf="@id/card4" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Menú lateral -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/resultados"
-        android:fontFamily="@font/montserrat_bold"
-        android:textSize="20sp"
-        android:elevation="6dp"
-        android:layout_marginEnd="80dp"
-        android:textColorHint="@color/Secondary_Darker"
-        app:layout_constraintEnd_toEndOf="@id/card"
-        app:layout_constraintTop_toTopOf="@id/card"
-        app:layout_constraintBottom_toBottomOf="@id/card" />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/nav_menu"
+        app:headerLayout="@layout/nav_header"
+        android:background="@color/white"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card2"
-        android:layout_width="350dp"
-        android:layout_height="150dp"
-        android:background="@drawable/shadow"
-        app:cardBackgroundColor="@color/Primary_Light"
-        app:cardCornerRadius="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/results"
-        android:contentDescription="@string/results"
-        android:src="@drawable/results"
-        android:layout_marginStart="20dp"
-        app:layout_constraintStart_toStartOf="@id/card2"
-        app:layout_constraintTop_toTopOf="@id/card2"
-        app:layout_constraintBottom_toBottomOf="@id/card2"
-        android:elevation="6dp"/>
-
-    <TextView
-        android:id="@+id/title_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/resultados"
-        android:fontFamily="@font/montserrat_bold"
-        android:textSize="20sp"
-        android:elevation="6dp"
-        android:layout_marginEnd="80dp"
-        android:textColorHint="@color/Secondary_Darker"
-        app:layout_constraintEnd_toEndOf="@id/card2"
-        app:layout_constraintTop_toTopOf="@id/card2"
-        app:layout_constraintBottom_toBottomOf="@id/card2" />
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card3"
-        android:layout_width="350dp"
-        android:layout_height="150dp"
-        android:background="@drawable/shadow"
-        app:cardBackgroundColor="@color/Primary_Light"
-        app:cardCornerRadius="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card2"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/ubication"
-        android:contentDescription="@string/ubication"
-        android:src="@drawable/location_ic"
-        android:layout_marginStart="20dp"
-        app:layout_constraintStart_toStartOf="@id/card3"
-        app:layout_constraintTop_toTopOf="@id/card3"
-        app:layout_constraintBottom_toBottomOf="@id/card3"
-        android:elevation="6dp"/>
-
-    <TextView
-        android:id="@+id/title_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ubicaciones"
-        android:fontFamily="@font/montserrat_bold"
-        android:textSize="20sp"
-        android:elevation="6dp"
-        android:layout_marginEnd="80dp"
-        android:textColorHint="@color/Secondary_Darker"
-        app:layout_constraintEnd_toEndOf="@id/card3"
-        app:layout_constraintTop_toTopOf="@id/card3"
-        app:layout_constraintBottom_toBottomOf="@id/card3" />
-
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
